Project3/Grammar.output
Rules never reduced

   15 MethodDeclLoop2: /* empty */


State 11 conflicts: 1 shift/reduce
State 13 conflicts: 2 shift/reduce
State 15 conflicts: 2 shift/reduce
State 16 conflicts: 1 shift/reduce, 1 reduce/reduce
State 17 conflicts: 1 shift/reduce, 1 reduce/reduce
State 41 conflicts: 2 reduce/reduce
State 77 conflicts: 2 shift/reduce
State 78 conflicts: 1 shift/reduce
State 139 conflicts: 1 shift/reduce
State 140 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program EOFnum

    1 Program: PROGRAMnum IDnum SEMInum ClassDeclLoop

    2 ClassDeclLoop: ClassDeclLoop ClassDecl
    3              | ClassDecl

    4 ClassDecl: CLASSnum IDnum ClassBody

    5 ClassBody: LBRACEnum Decls RBRACEnum
    6          | LBRACEnum RBRACEnum
    7          | LBRACEnum Decls MethodDeclLoop RBRACEnum

    8 Decls: DECLARATIONSnum DeclsLoop ENDDECLARATIONSnum
    9      | /* empty */

   10 DeclsLoop: /* empty */
   11          | DeclsLoop FieldDecl
   12          | FieldDecl

   13 MethodDeclLoop: MethodDeclLoop MethodDecl
   14               | MethodDeclLoop2

   15 MethodDeclLoop2: /* empty */
   16                | MethodDecl

   17 MethodDecl: METHODnum VOIDnum IDnum LPARENnum FormalParameterListNoType RPARENnum Block
   18           | METHODnum Type IDnum LPARENnum FormalParameterListWithType RPARENnum Block

   19 FieldDecl: Type FieldDeclInner SEMInum

   20 FormalParameterListNoType: /* empty */
   21                          | FormalParameterListLoopWithVal
   22                          | FormalParameterListLoopNoVal

   23 FormalParameterListWithType: /* empty */
   24                            | FormalParameterListLoopWithVal
   25                            | FormalParameterListLoopNoVal

   26 FormalParameterListLoopWithVal: VALnum INTnum IDnum
   27                               | VALnum INTnum IDnum SEMInum FormalParameterListLoopWithVal
   28                               | VALnum INTnum IDnum SEMInum FormalParameterListLoopNoVal
   29                               | VALnum INTnum IDnum COMMAnum ValLoop
   30                               | VALnum INTnum IDnum COMMAnum ValLoop SEMInum FormalParameterListLoopWithVal
   31                               | VALnum INTnum IDnum COMMAnum ValLoop SEMInum FormalParameterListLoopNoVal

   32 FormalParameterListLoopNoVal: INTnum IDnum
   33                             | INTnum IDnum SEMInum FormalParameterListLoopWithVal
   34                             | INTnum IDnum SEMInum FormalParameterListLoopNoVal
   35                             | INTnum IDnum COMMAnum ValLoop
   36                             | INTnum IDnum COMMAnum ValLoop SEMInum FormalParameterListLoopNoVal
   37                             | INTnum IDnum COMMAnum ValLoop SEMInum FormalParameterListLoopWithVal

   38 Type: INTnum BrackLoop
   39     | IDnum BrackLoop
   40     | INTnum TypeList
   41     | IDnum TypeList
   42     | IDnum TypeList DOTnum Type
   43     | INTnum TypeList DOTnum Type
   44     | IDnum
   45     | INTnum

   46 TypeList: LBRACnum RBRACnum
   47         | TypeList LBRACnum RBRACnum
   48         | /* empty */

   49 ValLoop: IDnum COMMAnum ValLoop
   50        | IDnum

   51 Block: StatementList
   52      | Decls StatementList

   53 StatementList: LBRACEnum StatementLoop RBRACEnum

   54 StatementLoop: Statement
   55              | StatementLoop SEMInum Statement

   56 Statement: /* empty */
   57          | AssignmentStatement
   58          | MethodCallStatement
   59          | ReturnStatement
   60          | IfStatement
   61          | WhileStatement

   62 FieldDeclInner: FieldDeclLoop2
   63               | FieldDeclInner COMMAnum FieldDeclLoop2

   64 FieldDeclLoop2: VariableDeclId
   65               | VariableDeclId EQUALnum VariableInitializer

   66 VariableDeclId: IDnum
   67               | IDnum BrackLoop

   68 BrackLoop: LBRACnum RBRACnum
   69          | BrackLoop LBRACnum RBRACnum

   70 VariableInitializer: Expression
   71                    | ArrayIntializer
   72                    | ArrayCreationExpression

   73 ArrayIntializer: LBRACEnum VariableInitializerLoop RBRACEnum

   74 VariableInitializerLoop: VariableInitializer
   75                        | VariableInitializerLoop COMMAnum VariableInitializer

   76 ArrayCreationExpression: INTnum ArrayCreationExpressionLoop

   77 ArrayCreationExpressionLoop: ArrayCreationExpressionLoop ArrayCreationExpressionLoop2
   78                            | ArrayCreationExpressionLoop2

   79 ArrayCreationExpressionLoop2: LBRACnum Expression RBRACnum

   80 AssignmentStatement: Variable ASSGNnum Expression

   81 MethodCallStatement: Variable LPARENnum ExpressionLoop RPARENnum

   82 ExpressionLoop: Expression
   83               | Expression COMMAnum ExpressionLoop
   84               | /* empty */

   85 Expression: SimpleExpression
   86           | SimpleExpression LTnum SimpleExpression
   87           | SimpleExpression LEnum SimpleExpression
   88           | SimpleExpression EQnum SimpleExpression
   89           | SimpleExpression NEnum SimpleExpression
   90           | SimpleExpression GTnum SimpleExpression
   91           | SimpleExpression GEnum SimpleExpression

   92 Factor: UnsignedConstant
   93       | Variable
   94       | MethodCallStatement
   95       | LPARENnum Expression RPARENnum
   96       | NOTnum Factor

   97 Term: Factor
   98     | Factor ANDnum Term
   99     | Factor DIVIDEnum Term
  100     | Factor TIMESnum Term

  101 UnsignedConstant: ICONSTnum
  102                 | SCONSTnum

  103 SimpleExpression: SimpleExpressionList
  104                 | PLUSnum SimpleExpressionList
  105                 | MINUSnum SimpleExpressionList

  106 SimpleExpressionList: Term
  107                     | SimpleExpressionList PLUSnum Term
  108                     | SimpleExpressionList MINUSnum Term
  109                     | SimpleExpressionList ORnum Term

  110 Variable: IDnum
  111         | IDnum VariableLoop

  112 VariableLoop: VariableLoop DOTnum IDnum
  113             | DOTnum IDnum
  114             | LBRACnum Expression ExpressionLoop RBRACnum
  115             | VariableLoop LBRACnum Expression ExpressionLoop RBRACnum

  116 ReturnStatement: RETURNnum
  117                | RETURNnum Expression

  118 IfStatement: IFnum Expression StatementList
  119            | IfStatement ELSEnum IFnum Expression StatementList
  120            | IfStatement ELSEnum StatementList

  121 WhileStatement: WHILEnum Expression StatementList


Terminals, with rules where they appear

EOFnum (0) 0
error (256)
DECLARATIONSnum (258) 8
ASSGNnum (259) 80
PROGRAMnum (260) 1
IDnum (261) 1 4 17 18 26 27 28 29 30 31 32 33 34 35 36 37 39 41 42
    44 49 50 66 67 110 111 112 113
SEMInum (262) 1 19 27 28 30 31 33 34 36 37 55
ANDnum (263) 98
DOTnum (264) 42 43 112 113
ENDDECLARATIONSnum (265) 8
EQUALnum (266) 65
GTnum (267) 90
INTnum (268) 26 27 28 29 30 31 32 33 34 35 36 37 38 40 43 45 76
LBRACnum (269) 46 47 68 69 79 114 115
LPARENnum (270) 17 18 81 95
METHODnum (271) 17 18
NEnum (272) 89
ORnum (273) 109
RBRACnum (274) 46 47 68 69 79 114 115
RPARENnum (275) 17 18 81 95
VALnum (276) 26 27 28 29 30 31
WHILEnum (277) 121
CLASSnum (278) 4
COMMAnum (279) 29 30 31 35 36 37 49 63 75 83
DIVIDEnum (280) 99
ELSEnum (281) 119 120
EQnum (282) 88
GEnum (283) 91
ICONSTnum (284) 101
IFnum (285) 118 119
LBRACEnum (286) 5 6 7 53 73
LEnum (287) 87
LTnum (288) 86
MINUSnum (289) 105 108
NOTnum (290) 96
PLUSnum (291) 104 107
RBRACEnum (292) 5 6 7 53 73
RETURNnum (293) 116 117
SCONSTnum (294) 102
TIMESnum (295) 100
VOIDnum (296) 17


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
Program (43)
    on left: 1, on right: 0
ClassDeclLoop (44)
    on left: 2 3, on right: 1 2
ClassDecl (45)
    on left: 4, on right: 2 3
ClassBody (46)
    on left: 5 6 7, on right: 4
Decls (47)
    on left: 8 9, on right: 5 7 52
DeclsLoop (48)
    on left: 10 11 12, on right: 8 11
MethodDeclLoop (49)
    on left: 13 14, on right: 7 13
MethodDeclLoop2 (50)
    on left: 15 16, on right: 14
MethodDecl (51)
    on left: 17 18, on right: 13 16
FieldDecl (52)
    on left: 19, on right: 11 12
FormalParameterListNoType (53)
    on left: 20 21 22, on right: 17
FormalParameterListWithType (54)
    on left: 23 24 25, on right: 18
FormalParameterListLoopWithVal (55)
    on left: 26 27 28 29 30 31, on right: 21 24 27 30 33 37
FormalParameterListLoopNoVal (56)
    on left: 32 33 34 35 36 37, on right: 22 25 28 31 34 36
Type (57)
    on left: 38 39 40 41 42 43 44 45, on right: 18 19 42 43
TypeList (58)
    on left: 46 47 48, on right: 40 41 42 43 47
ValLoop (59)
    on left: 49 50, on right: 29 30 31 35 36 37 49
Block (60)
    on left: 51 52, on right: 17 18
StatementList (61)
    on left: 53, on right: 51 52 118 119 120 121
StatementLoop (62)
    on left: 54 55, on right: 53 55
Statement (63)
    on left: 56 57 58 59 60 61, on right: 54 55
FieldDeclInner (64)
    on left: 62 63, on right: 19 63
FieldDeclLoop2 (65)
    on left: 64 65, on right: 62 63
VariableDeclId (66)
    on left: 66 67, on right: 64 65
BrackLoop (67)
    on left: 68 69, on right: 38 39 67 69
VariableInitializer (68)
    on left: 70 71 72, on right: 65 74 75
ArrayIntializer (69)
    on left: 73, on right: 71
VariableInitializerLoop (70)
    on left: 74 75, on right: 73 75
ArrayCreationExpression (71)
    on left: 76, on right: 72
ArrayCreationExpressionLoop (72)
    on left: 77 78, on right: 76 77
ArrayCreationExpressionLoop2 (73)
    on left: 79, on right: 77 78
AssignmentStatement (74)
    on left: 80, on right: 57
MethodCallStatement (75)
    on left: 81, on right: 58 94
ExpressionLoop (76)
    on left: 82 83 84, on right: 81 83 114 115
Expression (77)
    on left: 85 86 87 88 89 90 91, on right: 70 79 80 82 83 95 114
    115 117 118 119 121
Factor (78)
    on left: 92 93 94 95 96, on right: 96 97 98 99 100
Term (79)
    on left: 97 98 99 100, on right: 98 99 100 106 107 108 109
UnsignedConstant (80)
    on left: 101 102, on right: 92
SimpleExpression (81)
    on left: 103 104 105, on right: 85 86 87 88 89 90 91
SimpleExpressionList (82)
    on left: 106 107 108 109, on right: 103 104 105 107 108 109
Variable (83)
    on left: 110 111, on right: 80 81 93
VariableLoop (84)
    on left: 112 113 114 115, on right: 111 112 115
ReturnStatement (85)
    on left: 116 117, on right: 59
IfStatement (86)
    on left: 118 119 120, on right: 60 119 120
WhileStatement (87)
    on left: 121, on right: 61


state 0

    0 $accept: . Program EOFnum

    PROGRAMnum  shift, and go to state 1

    Program  go to state 2


state 1

    1 Program: PROGRAMnum . IDnum SEMInum ClassDeclLoop

    IDnum  shift, and go to state 3


state 2

    0 $accept: Program . EOFnum

    EOFnum  shift, and go to state 4


state 3

    1 Program: PROGRAMnum IDnum . SEMInum ClassDeclLoop

    SEMInum  shift, and go to state 5


state 4

    0 $accept: Program EOFnum .

    $default  accept


state 5

    1 Program: PROGRAMnum IDnum SEMInum . ClassDeclLoop

    CLASSnum  shift, and go to state 6

    ClassDeclLoop  go to state 7
    ClassDecl      go to state 8


state 6

    4 ClassDecl: CLASSnum . IDnum ClassBody

    IDnum  shift, and go to state 9


state 7

    1 Program: PROGRAMnum IDnum SEMInum ClassDeclLoop .
    2 ClassDeclLoop: ClassDeclLoop . ClassDecl

    CLASSnum  shift, and go to state 6

    $default  reduce using rule 1 (Program)

    ClassDecl  go to state 10


state 8

    3 ClassDeclLoop: ClassDecl .

    $default  reduce using rule 3 (ClassDeclLoop)


state 9

    4 ClassDecl: CLASSnum IDnum . ClassBody

    LBRACEnum  shift, and go to state 11

    ClassBody  go to state 12


state 10

    2 ClassDeclLoop: ClassDeclLoop ClassDecl .

    $default  reduce using rule 2 (ClassDeclLoop)


state 11

    5 ClassBody: LBRACEnum . Decls RBRACEnum
    6          | LBRACEnum . RBRACEnum
    7          | LBRACEnum . Decls MethodDeclLoop RBRACEnum

    DECLARATIONSnum  shift, and go to state 13
    RBRACEnum        shift, and go to state 14

    RBRACEnum  [reduce using rule 9 (Decls)]
    $default   reduce using rule 9 (Decls)

    Decls  go to state 15


state 12

    4 ClassDecl: CLASSnum IDnum ClassBody .

    $default  reduce using rule 4 (ClassDecl)


state 13

    8 Decls: DECLARATIONSnum . DeclsLoop ENDDECLARATIONSnum

    IDnum   shift, and go to state 16
    INTnum  shift, and go to state 17

    IDnum     [reduce using rule 10 (DeclsLoop)]
    INTnum    [reduce using rule 10 (DeclsLoop)]
    $default  reduce using rule 10 (DeclsLoop)

    DeclsLoop  go to state 18
    FieldDecl  go to state 19
    Type       go to state 20


state 14

    6 ClassBody: LBRACEnum RBRACEnum .

    $default  reduce using rule 6 (ClassBody)


state 15

    5 ClassBody: LBRACEnum Decls . RBRACEnum
    7          | LBRACEnum Decls . MethodDeclLoop RBRACEnum

    METHODnum  shift, and go to state 21
    RBRACEnum  shift, and go to state 22

    METHODnum  [reduce using rule 15 (MethodDeclLoop2)]
    RBRACEnum  [reduce using rule 15 (MethodDeclLoop2)]

    MethodDeclLoop   go to state 23
    MethodDeclLoop2  go to state 24
    MethodDecl       go to state 25


state 16

   39 Type: IDnum . BrackLoop
   41     | IDnum . TypeList
   42     | IDnum . TypeList DOTnum Type
   44     | IDnum .

    LBRACnum  shift, and go to state 26

    IDnum     reduce using rule 44 (Type)
    IDnum     [reduce using rule 48 (TypeList)]
    DOTnum    reduce using rule 48 (TypeList)
    LBRACnum  [reduce using rule 48 (TypeList)]
    $default  reduce using rule 44 (Type)

    TypeList   go to state 27
    BrackLoop  go to state 28


state 17

   38 Type: INTnum . BrackLoop
   40     | INTnum . TypeList
   43     | INTnum . TypeList DOTnum Type
   45     | INTnum .

    LBRACnum  shift, and go to state 26

    IDnum     reduce using rule 45 (Type)
    IDnum     [reduce using rule 48 (TypeList)]
    DOTnum    reduce using rule 48 (TypeList)
    LBRACnum  [reduce using rule 48 (TypeList)]
    $default  reduce using rule 45 (Type)

    TypeList   go to state 29
    BrackLoop  go to state 30


state 18

    8 Decls: DECLARATIONSnum DeclsLoop . ENDDECLARATIONSnum
   11 DeclsLoop: DeclsLoop . FieldDecl

    IDnum               shift, and go to state 16
    ENDDECLARATIONSnum  shift, and go to state 31
    INTnum              shift, and go to state 17

    FieldDecl  go to state 32
    Type       go to state 20


state 19

   12 DeclsLoop: FieldDecl .

    $default  reduce using rule 12 (DeclsLoop)


state 20

   19 FieldDecl: Type . FieldDeclInner SEMInum

    IDnum  shift, and go to state 33

    FieldDeclInner  go to state 34
    FieldDeclLoop2  go to state 35
    VariableDeclId  go to state 36


state 21

   17 MethodDecl: METHODnum . VOIDnum IDnum LPARENnum FormalParameterListNoType RPARENnum Block
   18           | METHODnum . Type IDnum LPARENnum FormalParameterListWithType RPARENnum Block

    IDnum    shift, and go to state 16
    INTnum   shift, and go to state 17
    VOIDnum  shift, and go to state 37

    Type  go to state 38


state 22

    5 ClassBody: LBRACEnum Decls RBRACEnum .

    $default  reduce using rule 5 (ClassBody)


state 23

    7 ClassBody: LBRACEnum Decls MethodDeclLoop . RBRACEnum
   13 MethodDeclLoop: MethodDeclLoop . MethodDecl

    METHODnum  shift, and go to state 21
    RBRACEnum  shift, and go to state 39

    MethodDecl  go to state 40


state 24

   14 MethodDeclLoop: MethodDeclLoop2 .

    $default  reduce using rule 14 (MethodDeclLoop)


state 25

   16 MethodDeclLoop2: MethodDecl .

    $default  reduce using rule 16 (MethodDeclLoop2)


state 26

   46 TypeList: LBRACnum . RBRACnum
   68 BrackLoop: LBRACnum . RBRACnum

    RBRACnum  shift, and go to state 41


state 27

   41 Type: IDnum TypeList .
   42     | IDnum TypeList . DOTnum Type
   47 TypeList: TypeList . LBRACnum RBRACnum

    DOTnum    shift, and go to state 42
    LBRACnum  shift, and go to state 43

    $default  reduce using rule 41 (Type)


state 28

   39 Type: IDnum BrackLoop .
   69 BrackLoop: BrackLoop . LBRACnum RBRACnum

    LBRACnum  shift, and go to state 44

    $default  reduce using rule 39 (Type)


state 29

   40 Type: INTnum TypeList .
   43     | INTnum TypeList . DOTnum Type
   47 TypeList: TypeList . LBRACnum RBRACnum

    DOTnum    shift, and go to state 45
    LBRACnum  shift, and go to state 43

    $default  reduce using rule 40 (Type)


state 30

   38 Type: INTnum BrackLoop .
   69 BrackLoop: BrackLoop . LBRACnum RBRACnum

    LBRACnum  shift, and go to state 44

    $default  reduce using rule 38 (Type)


state 31

    8 Decls: DECLARATIONSnum DeclsLoop ENDDECLARATIONSnum .

    $default  reduce using rule 8 (Decls)


state 32

   11 DeclsLoop: DeclsLoop FieldDecl .

    $default  reduce using rule 11 (DeclsLoop)


state 33

   66 VariableDeclId: IDnum .
   67               | IDnum . BrackLoop

    LBRACnum  shift, and go to state 46

    $default  reduce using rule 66 (VariableDeclId)

    BrackLoop  go to state 47


state 34

   19 FieldDecl: Type FieldDeclInner . SEMInum
   63 FieldDeclInner: FieldDeclInner . COMMAnum FieldDeclLoop2

    SEMInum   shift, and go to state 48
    COMMAnum  shift, and go to state 49


state 35

   62 FieldDeclInner: FieldDeclLoop2 .

    $default  reduce using rule 62 (FieldDeclInner)


state 36

   64 FieldDeclLoop2: VariableDeclId .
   65               | VariableDeclId . EQUALnum VariableInitializer

    EQUALnum  shift, and go to state 50

    $default  reduce using rule 64 (FieldDeclLoop2)


state 37

   17 MethodDecl: METHODnum VOIDnum . IDnum LPARENnum FormalParameterListNoType RPARENnum Block

    IDnum  shift, and go to state 51


state 38

   18 MethodDecl: METHODnum Type . IDnum LPARENnum FormalParameterListWithType RPARENnum Block

    IDnum  shift, and go to state 52


state 39

    7 ClassBody: LBRACEnum Decls MethodDeclLoop RBRACEnum .

    $default  reduce using rule 7 (ClassBody)


state 40

   13 MethodDeclLoop: MethodDeclLoop MethodDecl .

    $default  reduce using rule 13 (MethodDeclLoop)


state 41

   46 TypeList: LBRACnum RBRACnum .
   68 BrackLoop: LBRACnum RBRACnum .

    IDnum     reduce using rule 46 (TypeList)
    IDnum     [reduce using rule 68 (BrackLoop)]
    LBRACnum  reduce using rule 46 (TypeList)
    LBRACnum  [reduce using rule 68 (BrackLoop)]
    $default  reduce using rule 46 (TypeList)


state 42

   42 Type: IDnum TypeList DOTnum . Type

    IDnum   shift, and go to state 16
    INTnum  shift, and go to state 17

    Type  go to state 53


state 43

   47 TypeList: TypeList LBRACnum . RBRACnum

    RBRACnum  shift, and go to state 54


state 44

   69 BrackLoop: BrackLoop LBRACnum . RBRACnum

    RBRACnum  shift, and go to state 55


state 45

   43 Type: INTnum TypeList DOTnum . Type

    IDnum   shift, and go to state 16
    INTnum  shift, and go to state 17

    Type  go to state 56


state 46

   68 BrackLoop: LBRACnum . RBRACnum

    RBRACnum  shift, and go to state 57


state 47

   67 VariableDeclId: IDnum BrackLoop .
   69 BrackLoop: BrackLoop . LBRACnum RBRACnum

    LBRACnum  shift, and go to state 44

    $default  reduce using rule 67 (VariableDeclId)


state 48

   19 FieldDecl: Type FieldDeclInner SEMInum .

    $default  reduce using rule 19 (FieldDecl)


state 49

   63 FieldDeclInner: FieldDeclInner COMMAnum . FieldDeclLoop2

    IDnum  shift, and go to state 33

    FieldDeclLoop2  go to state 58
    VariableDeclId  go to state 36


state 50

   65 FieldDeclLoop2: VariableDeclId EQUALnum . VariableInitializer

    IDnum      shift, and go to state 59
    INTnum     shift, and go to state 60
    LPARENnum  shift, and go to state 61
    ICONSTnum  shift, and go to state 62
    LBRACEnum  shift, and go to state 63
    MINUSnum   shift, and go to state 64
    NOTnum     shift, and go to state 65
    PLUSnum    shift, and go to state 66
    SCONSTnum  shift, and go to state 67

    VariableInitializer      go to state 68
    ArrayIntializer          go to state 69
    ArrayCreationExpression  go to state 70
    MethodCallStatement      go to state 71
    Expression               go to state 72
    Factor                   go to state 73
    Term                     go to state 74
    UnsignedConstant         go to state 75
    SimpleExpression         go to state 76
    SimpleExpressionList     go to state 77
    Variable                 go to state 78


state 51

   17 MethodDecl: METHODnum VOIDnum IDnum . LPARENnum FormalParameterListNoType RPARENnum Block

    LPARENnum  shift, and go to state 79


state 52

   18 MethodDecl: METHODnum Type IDnum . LPARENnum FormalParameterListWithType RPARENnum Block

    LPARENnum  shift, and go to state 80


state 53

   42 Type: IDnum TypeList DOTnum Type .

    $default  reduce using rule 42 (Type)


state 54

   47 TypeList: TypeList LBRACnum RBRACnum .

    $default  reduce using rule 47 (TypeList)


state 55

   69 BrackLoop: BrackLoop LBRACnum RBRACnum .

    $default  reduce using rule 69 (BrackLoop)


state 56

   43 Type: INTnum TypeList DOTnum Type .

    $default  reduce using rule 43 (Type)


state 57

   68 BrackLoop: LBRACnum RBRACnum .

    $default  reduce using rule 68 (BrackLoop)


state 58

   63 FieldDeclInner: FieldDeclInner COMMAnum FieldDeclLoop2 .

    $default  reduce using rule 63 (FieldDeclInner)


state 59

  110 Variable: IDnum .
  111         | IDnum . VariableLoop

    DOTnum    shift, and go to state 81
    LBRACnum  shift, and go to state 82

    $default  reduce using rule 110 (Variable)

    VariableLoop  go to state 83


state 60

   76 ArrayCreationExpression: INTnum . ArrayCreationExpressionLoop

    LBRACnum  shift, and go to state 84

    ArrayCreationExpressionLoop   go to state 85
    ArrayCreationExpressionLoop2  go to state 86


state 61

   95 Factor: LPARENnum . Expression RPARENnum

    IDnum      shift, and go to state 59
    LPARENnum  shift, and go to state 61
    ICONSTnum  shift, and go to state 62
    MINUSnum   shift, and go to state 64
    NOTnum     shift, and go to state 65
    PLUSnum    shift, and go to state 66
    SCONSTnum  shift, and go to state 67

    MethodCallStatement   go to state 71
    Expression            go to state 87
    Factor                go to state 73
    Term                  go to state 74
    UnsignedConstant      go to state 75
    SimpleExpression      go to state 76
    SimpleExpressionList  go to state 77
    Variable              go to state 78


state 62

  101 UnsignedConstant: ICONSTnum .

    $default  reduce using rule 101 (UnsignedConstant)


state 63

   73 ArrayIntializer: LBRACEnum . VariableInitializerLoop RBRACEnum

    IDnum      shift, and go to state 59
    INTnum     shift, and go to state 60
    LPARENnum  shift, and go to state 61
    ICONSTnum  shift, and go to state 62
    LBRACEnum  shift, and go to state 63
    MINUSnum   shift, and go to state 64
    NOTnum     shift, and go to state 65
    PLUSnum    shift, and go to state 66
    SCONSTnum  shift, and go to state 67

    VariableInitializer      go to state 88
    ArrayIntializer          go to state 69
    VariableInitializerLoop  go to state 89
    ArrayCreationExpression  go to state 70
    MethodCallStatement      go to state 71
    Expression               go to state 72
    Factor                   go to state 73
    Term                     go to state 74
    UnsignedConstant         go to state 75
    SimpleExpression         go to state 76
    SimpleExpressionList     go to state 77
    Variable                 go to state 78


state 64

  105 SimpleExpression: MINUSnum . SimpleExpressionList

    IDnum      shift, and go to state 59
    LPARENnum  shift, and go to state 61
    ICONSTnum  shift, and go to state 62
    NOTnum     shift, and go to state 65
    SCONSTnum  shift, and go to state 67

    MethodCallStatement   go to state 71
    Factor                go to state 73
    Term                  go to state 74
    UnsignedConstant      go to state 75
    SimpleExpressionList  go to state 90
    Variable              go to state 78


state 65

   96 Factor: NOTnum . Factor

    IDnum      shift, and go to state 59
    LPARENnum  shift, and go to state 61
    ICONSTnum  shift, and go to state 62
    NOTnum     shift, and go to state 65
    SCONSTnum  shift, and go to state 67

    MethodCallStatement  go to state 71
    Factor               go to state 91
    UnsignedConstant     go to state 75
    Variable             go to state 78


state 66

  104 SimpleExpression: PLUSnum . SimpleExpressionList

    IDnum      shift, and go to state 59
    LPARENnum  shift, and go to state 61
    ICONSTnum  shift, and go to state 62
    NOTnum     shift, and go to state 65
    SCONSTnum  shift, and go to state 67

    MethodCallStatement   go to state 71
    Factor                go to state 73
    Term                  go to state 74
    UnsignedConstant      go to state 75
    SimpleExpressionList  go to state 92
    Variable              go to state 78


state 67

  102 UnsignedConstant: SCONSTnum .

    $default  reduce using rule 102 (UnsignedConstant)


state 68

   65 FieldDeclLoop2: VariableDeclId EQUALnum VariableInitializer .

    $default  reduce using rule 65 (FieldDeclLoop2)


state 69

   71 VariableInitializer: ArrayIntializer .

    $default  reduce using rule 71 (VariableInitializer)


state 70

   72 VariableInitializer: ArrayCreationExpression .

    $default  reduce using rule 72 (VariableInitializer)


state 71

   94 Factor: MethodCallStatement .

    $default  reduce using rule 94 (Factor)


state 72

   70 VariableInitializer: Expression .

    $default  reduce using rule 70 (VariableInitializer)


state 73

   97 Term: Factor .
   98     | Factor . ANDnum Term
   99     | Factor . DIVIDEnum Term
  100     | Factor . TIMESnum Term

    ANDnum     shift, and go to state 93
    DIVIDEnum  shift, and go to state 94
    TIMESnum   shift, and go to state 95

    $default  reduce using rule 97 (Term)


state 74

  106 SimpleExpressionList: Term .

    $default  reduce using rule 106 (SimpleExpressionList)


state 75

   92 Factor: UnsignedConstant .

    $default  reduce using rule 92 (Factor)


state 76

   85 Expression: SimpleExpression .
   86           | SimpleExpression . LTnum SimpleExpression
   87           | SimpleExpression . LEnum SimpleExpression
   88           | SimpleExpression . EQnum SimpleExpression
   89           | SimpleExpression . NEnum SimpleExpression
   90           | SimpleExpression . GTnum SimpleExpression
   91           | SimpleExpression . GEnum SimpleExpression

    GTnum  shift, and go to state 96
    NEnum  shift, and go to state 97
    EQnum  shift, and go to state 98
    GEnum  shift, and go to state 99
    LEnum  shift, and go to state 100
    LTnum  shift, and go to state 101

    $default  reduce using rule 85 (Expression)


state 77

  103 SimpleExpression: SimpleExpressionList .
  107 SimpleExpressionList: SimpleExpressionList . PLUSnum Term
  108                     | SimpleExpressionList . MINUSnum Term
  109                     | SimpleExpressionList . ORnum Term

    ORnum     shift, and go to state 102
    MINUSnum  shift, and go to state 103
    PLUSnum   shift, and go to state 104

    MINUSnum  [reduce using rule 103 (SimpleExpression)]
    PLUSnum   [reduce using rule 103 (SimpleExpression)]
    $default  reduce using rule 103 (SimpleExpression)


state 78

   81 MethodCallStatement: Variable . LPARENnum ExpressionLoop RPARENnum
   93 Factor: Variable .

    LPARENnum  shift, and go to state 105

    LPARENnum  [reduce using rule 93 (Factor)]
    $default   reduce using rule 93 (Factor)


state 79

   17 MethodDecl: METHODnum VOIDnum IDnum LPARENnum . FormalParameterListNoType RPARENnum Block

    INTnum  shift, and go to state 106
    VALnum  shift, and go to state 107

    $default  reduce using rule 20 (FormalParameterListNoType)

    FormalParameterListNoType       go to state 108
    FormalParameterListLoopWithVal  go to state 109
    FormalParameterListLoopNoVal    go to state 110


state 80

   18 MethodDecl: METHODnum Type IDnum LPARENnum . FormalParameterListWithType RPARENnum Block

    INTnum  shift, and go to state 106
    VALnum  shift, and go to state 107

    $default  reduce using rule 23 (FormalParameterListWithType)

    FormalParameterListWithType     go to state 111
    FormalParameterListLoopWithVal  go to state 112
    FormalParameterListLoopNoVal    go to state 113


state 81

  113 VariableLoop: DOTnum . IDnum

    IDnum  shift, and go to state 114


state 82

  114 VariableLoop: LBRACnum . Expression ExpressionLoop RBRACnum

    IDnum      shift, and go to state 59
    LPARENnum  shift, and go to state 61
    ICONSTnum  shift, and go to state 62
    MINUSnum   shift, and go to state 64
    NOTnum     shift, and go to state 65
    PLUSnum    shift, and go to state 66
    SCONSTnum  shift, and go to state 67

    MethodCallStatement   go to state 71
    Expression            go to state 115
    Factor                go to state 73
    Term                  go to state 74
    UnsignedConstant      go to state 75
    SimpleExpression      go to state 76
    SimpleExpressionList  go to state 77
    Variable              go to state 78


state 83

  111 Variable: IDnum VariableLoop .
  112 VariableLoop: VariableLoop . DOTnum IDnum
  115             | VariableLoop . LBRACnum Expression ExpressionLoop RBRACnum

    DOTnum    shift, and go to state 116
    LBRACnum  shift, and go to state 117

    $default  reduce using rule 111 (Variable)


state 84

   79 ArrayCreationExpressionLoop2: LBRACnum . Expression RBRACnum

    IDnum      shift, and go to state 59
    LPARENnum  shift, and go to state 61
    ICONSTnum  shift, and go to state 62
    MINUSnum   shift, and go to state 64
    NOTnum     shift, and go to state 65
    PLUSnum    shift, and go to state 66
    SCONSTnum  shift, and go to state 67

    MethodCallStatement   go to state 71
    Expression            go to state 118
    Factor                go to state 73
    Term                  go to state 74
    UnsignedConstant      go to state 75
    SimpleExpression      go to state 76
    SimpleExpressionList  go to state 77
    Variable              go to state 78


state 85

   76 ArrayCreationExpression: INTnum ArrayCreationExpressionLoop .
   77 ArrayCreationExpressionLoop: ArrayCreationExpressionLoop . ArrayCreationExpressionLoop2

    LBRACnum  shift, and go to state 84

    $default  reduce using rule 76 (ArrayCreationExpression)

    ArrayCreationExpressionLoop2  go to state 119


state 86

   78 ArrayCreationExpressionLoop: ArrayCreationExpressionLoop2 .

    $default  reduce using rule 78 (ArrayCreationExpressionLoop)


state 87

   95 Factor: LPARENnum Expression . RPARENnum

    RPARENnum  shift, and go to state 120


state 88

   74 VariableInitializerLoop: VariableInitializer .

    $default  reduce using rule 74 (VariableInitializerLoop)


state 89

   73 ArrayIntializer: LBRACEnum VariableInitializerLoop . RBRACEnum
   75 VariableInitializerLoop: VariableInitializerLoop . COMMAnum VariableInitializer

    COMMAnum   shift, and go to state 121
    RBRACEnum  shift, and go to state 122


state 90

  105 SimpleExpression: MINUSnum SimpleExpressionList .
  107 SimpleExpressionList: SimpleExpressionList . PLUSnum Term
  108                     | SimpleExpressionList . MINUSnum Term
  109                     | SimpleExpressionList . ORnum Term

    ORnum  shift, and go to state 102

    $default  reduce using rule 105 (SimpleExpression)


state 91

   96 Factor: NOTnum Factor .

    $default  reduce using rule 96 (Factor)


state 92

  104 SimpleExpression: PLUSnum SimpleExpressionList .
  107 SimpleExpressionList: SimpleExpressionList . PLUSnum Term
  108                     | SimpleExpressionList . MINUSnum Term
  109                     | SimpleExpressionList . ORnum Term

    ORnum  shift, and go to state 102

    $default  reduce using rule 104 (SimpleExpression)


state 93
